# bannkenn

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml
agent/ebpf/: containment.bpf.c
agent/src/: burst.rs  butterfly.rs  campaign.rs  client.rs  config.rs  containment.rs  correlator.rs  event_risk.rs  firewall.rs  geoip.rs  lib.rs  main.rs  outbox.rs  reporting.rs  risk_level.rs  scorer.rs  service.rs  shared_risk.rs  sync.rs  tofu.rs  updater.rs  watcher.rs
agent/src/ebpf/: events.rs  lifecycle.rs  mod.rs
agent/src/enforcement/: cgroup.rs
agent/src/patterns/: database.rs  ftp.rs  mail.rs  mod.rs  pam.rs  rdp.rs  smb.rs  ssh.rs  web.rs
agent/tests/: containment.rs  unit.rs
agent/tests/unit/: config_tests.rs  correlator_tests.rs  main_tests.rs  outbox_tests.rs  scorer_tests.rs  shared_risk_tests.rs  updater_tests.rs  watcher_tests.rs
agent/tests/unit/ebpf/: lifecycle_tests.rs  mod_tests.rs
agent/tests/unit/enforcement/: cgroup_tests.rs
dashboard/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/agents/[id]/: page.tsx
dashboard/app/api/agents/: route.ts
dashboard/app/api/alerts/: route.ts
dashboard/app/api/behavior-events/: route.ts
dashboard/app/api/community/: route.ts
dashboard/app/api/containment/: route.ts
dashboard/app/api/decisions/: route.ts
dashboard/app/api/health/: route.ts
dashboard/app/api/incidents/: route.ts
dashboard/app/api/ip-intel/: route.ts
dashboard/app/api/ip-lookup/: route.ts
dashboard/app/api/ssh-logins/: route.ts
dashboard/app/api/telemetry/: route.ts
dashboard/app/api/whitelist/: route.ts
dashboard/app/behavior/: layout.tsx  page.tsx
dashboard/app/behavior/fleet/: page.tsx
dashboard/app/community/: page.tsx
dashboard/app/incidents/: page.tsx
dashboard/app/ip-monitor/: layout.tsx  page.tsx
dashboard/app/lookup/: page.tsx
dashboard/app/whitelist/: page.tsx
dashboard/components/: main-nav.tsx  sidebar-layout.tsx
dashboard/components/ui/: table.tsx
dashboard/src/server/: upstream.ts
docker/: Dockerfile.dashboard  Dockerfile.server  docker-compose.yml
docs/: 01_ButterflyShield.md  02_RFC-vNext  03_Operations_and_Containment_Runbook.md  03_Security Mesh with Cryptographic Trust Ledger.md  05_Technical Investigation Report.md  06_BannKenn v2 Detection Design Review.md  ButterflyShield.md  README.md
scripts/: build-ebpf.sh  bump-version.sh  collect-containment-diagnostics.sh  generate-ip-cert.sh  install.sh  release.sh  v1.0.2.md  verify-runtime-checks.sh
scripts/nginx/: bannkenn-tls.example.conf
scripts/version/: v1.0.0.md  v1.0.1.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.3.10.md  v1.3.11.md  v1.3.12.md  v1.3.13.md  v1.3.14.md  v1.3.15.md  v1.3.16.md  v1.3.17.md  v1.3.18.md  v1.3.19.md  v1.3.2.md  v1.3.20.md  v1.3.21.md  v1.3.22.md  v1.3.23.md  v1.3.24.md  v1.3.25.md  v1.3.26.md  v1.3.27.md  v1.3.28.md  v1.3.29.md  v1.3.3.md  v1.3.30.md  v1.3.31.md  v1.3.32.md  v1.3.33.md  v1.3.34.md  v1.3.35.md  v1.3.4.md  v1.3.5.md  (+14 more)
server/: Cargo.toml
server/data/: LICENSE  README.md
server/src/: auth.rs  behavior_pg.rs  config.rs  db.rs  feeds.rs  geoip.rs  ip_pattern.rs  lib.rs  main.rs  validation.rs
server/src/app/: healthcheck.rs  mod.rs  router.rs  runtime.rs
server/src/db/: agents.rs  behavior.rs  commands.rs  community.rs  containment.rs  events.rs  helpers.rs  incidents.rs  schema.rs  types.rs  whitelist.rs
server/src/routes/: agents.rs  alerts.rs  behavior_events.rs  community.rs  containment.rs  containment_actions.rs  decisions.rs  incidents.rs  ip_lookup.rs  mod.rs  ssh_logins.rs  telemetry.rs  whitelist.rs
server/tests/: app.rs  auth.rs  behavior_pg.rs  config.rs  containment_actions.rs  db_behavior.rs  db_events.rs  ip_pattern.rs
server/tests/support/: mod.rs
tasks/: lessons.md  todo.md
(+32 files in other folders)
