[package]
name = "bannkenn-agent"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "bannkenn-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
regex = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
maxminddb = "0.24"
base64 = "0.22"
sha2 = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
aya = "0.13.1"
aya-log = "0.2.1"
