[package]
name = "bannkenn-server"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "bannkenn-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio", "service"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"] }
jsonwebtoken = "9"
rustls = "0.21"
rustls-pemfile = "1"
tokio-rustls = "0.24"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
sha2 = "0.10"
rand = "0.8"
maxminddb = { version = "0.24", features = ["mmap"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
